Avoid extra margin between 3D buttons
This allows for a slightly nicer overlaying effect

--- a/frontend/src/layout/navigation-3000/Navigation.scss
+++ b/frontend/src/layout/navigation-3000/Navigation.scss
@@ -88,10 +88,6 @@
         ul + ul {
             border-top-width: 1px;
         }
-
-        li + li {
-            margin-top: 1px;
-        }
     }
 }
 
